timer working displaying empty objects on click

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <div class = "buttons">
                 <button id = "playgame"> Do you want to play a game? </button>
                     <ul>
-                     <li><button id = "yes"><a href="quiz.html">yes</a></li></button>
-                     <li><button id = "no"><a href="doors/door2.html">no</a></li></button>
+                     <li><button id = "yesBtn"><a href="quiz.html">yes</a></li></button>
+                     <li><button id = "noBtn"><a href="doors/door2.html"></a>no</a></li></button>
                     <li><button id = "highscore"><a href="highscore.html">High Scores</a></li></button>
             </div>
         </div>    
