--- a/quiz.html
+++ b/quiz.html
@@ -11,28 +11,18 @@
 <body>
 
     <div class="container">
-        <div id="home" class="flex-column flex-center">
-            <h1 >JavaScript Quiz</h1>
-            <div class="timer"><p>I am a timer</p></div>
+        <div id="time-score">
+            <h1>JavaScript Quiz</h1>
+            <div class="timer">
+               <h2><span id="seconds-left"></span></h2> 
+               <button id="start-button">Start Countdown!</button>
+            </div>
             <p class ="score"> Score</p> 
         </div>    
-    <div class="question">
-    <h2 class="question-text"> GUESS WHAT mother fucker? </h2>
-        <div class="choice">
-            <p class="answer" data-number="1">a</p>
-        </div>
-        <div class="choice">
-            <p class="answer" data-number="2">b</p>
-        </div>
-        <div class="choice">
-            <p class="answer" data-number="3">c</p>
-        </div>
-        <div class="choice">
-            <p class="answer" data-number="4">d</p>
-        </div>
-
+    <div id="questionchoices" class="questionchoices">
+        <div id="question" class="question" data-number="1"></div>
+    </div>
     </div>  
-</div>
-    <script src="quiz.js"></script>
+    <script src="./assets/javascript/script.js"></script>
 </body>
 </html>
