removed for loop created i

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/quiz.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
 
 <body>
@@ -13,12 +13,12 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1 >JavaScript Quiz</h1>
-                <div class = "buttons">
-                <button id = "playgame"> Do you want to play a game? </button>
-                    <ul>
-                     <li><button id = "yesBtn"><a href="quiz.html">yes</a></li></button>
-                     <li><button id = "noBtn"><a href="doors/door2.html"></a>no</a></li></button>
-                    <li><button id = "highscore"><a href="highscore.html">High Scores</a></li></button>
+            <div class = "buttons">
+                <h2 id = "playgame">Do you want to play?</h2>
+                    <button id = "yesBtn"><a href="quiz.html">yes</a></button>
+                    <button id = "noBtn"><a href="doors/door2.html"></a>no</a></button>
+                    <button id = "highscoreBtn"><a href="highscore.html">High Scores</a></button>
+                     
             </div>
         </div>    
     </div>
