--- a/quiz.html
+++ b/quiz.html
@@ -14,13 +14,13 @@
         <div id="time-score">
             <h1>JavaScript Quiz</h1>
             <div class="timer">
-               <h2><span id="seconds-left"></span></h2> 
+              <h2><span id="seconds-left"></span></h2> 
                <button id="start-button">Start Countdown!</button>
             </div>
-            <p class ="score"> Score</p> 
+            <h2><span id="Score"></span></h2>
         </div>    
     <div id="questionchoices" class="questionchoices">
-        <div id="question" class="question" data-number="1"></div>
+        <div><span id="question"></span></div>
     </div>
     </div>  
     <script src="./assets/javascript/script.js"></script>
