added goodbye page

--- a/quiz.html
+++ b/quiz.html
@@ -20,8 +20,8 @@
             <h2><span id="Score"></span></h2>
         </div>    
     <div id="questionchoices" class="questionchoices">
-        <div><span id="question"></span></div>
-    </div>
+        <div id="question"></div>
+        <div id="choice"></div>
     </div>  
     <script src="./assets/javascript/script.js"></script>
 </body>
