--- a/no.html
+++ b/no.html
@@ -13,9 +13,10 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1 >JavaScript Quiz</h1>
-                <div class = "buttons">
-                <button id = "highscores"> High Scores! </button>
-                    <div class="showHighScores"></div>
+                <h2>Awww too bad...</h2>
+                <img id = "ok" src = "./assets/images/ok.png">
+                    <button id = "home"><a href="index.html">Home</a></button>
+                     
             </div>
         </div>    
     </div>
