changed to buttons and gave them values in js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript Quiz!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
 
@@ -16,7 +17,7 @@
             <div class = "buttons">
                 <h2 id = "playgame">Do you want to play?</h2>
                     <button id = "yesBtn"><a href="quiz.html">yes</a></button>
-                    <button id = "noBtn"><a href="doors/door2.html"></a>no</a></button>
+                    <button id = "noBtn"><a href="no.html">no</a></button>
                     <button id = "highscoreBtn"><a href="highscore.html">High Scores</a></button>
                      
             </div>
