--- a/no.html
+++ b/no.html
@@ -5,20 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/css/no.css"/>
 </head>
 
 <body>
 
     <div class="container">
-        <div id="home" class="flex-column flex-center">
             <h1 >JavaScript Quiz</h1>
                 <h2>Awww too bad...</h2>
-                <img id = "ok" src = "./assets/images/ok.png">
-                    <button id = "home"><a href="index.html">Home</a></button>
+                <button id = "homeBtn"><a href="index.html">Home</a></button>
+                <img id ="ok" src ="./assets/images/ok.png">
+                   
                      
-            </div>
-        </div>    
+            </div>   
     </div>
         </ul>
     </div>    
