--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/css/quiz.css"/>
 </head>
 
 <body>
@@ -15,14 +15,20 @@
             <h1>JavaScript Quiz</h1>
             <div class="timer">
               <h2><span id="seconds-left"></span></h2> 
-               <button id="start-button">Start Countdown!</button>
             </div>
+               <button id="start-button">Start Countdown!</button>
             <h2><span id="Score"></span></h2>
         </div>    
     <div id="questionchoices" class="questionchoices">
         <div id="question"></div>
-        <div id="choice"></div>
+        <div id="choice">I'm your answer</div>
+        <button value=0 class="choice1"></button>
+        <button value=1 class="choice2"></button>
+        <button class="choice3"></button>
+        <button class="choice4"></button>
+    <button id ="homeBtn"><a href="index.html">Home</a></button>
     </div>  
+ 
     <script src="./assets/javascript/script.js"></script>
 </body>
 </html>
