--- a/quiz.html
+++ b/quiz.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/quiz.css"/>
 </head>
 
@@ -22,8 +23,8 @@
     <div id="questionchoices" class="questionchoices">
         <div id="question"></div>
         <div id="choice">I'm your answer</div>
-        <button value=0 class="choice1"></button>
-        <button value=1 class="choice2"></button>
+        <button class="choice1"></button>
+        <button class="choice2"></button>
         <button class="choice3"></button>
         <button class="choice4"></button>
     <button id ="homeBtn"><a href="index.html">Home</a></button>
