--- a/quiz.html
+++ b/quiz.html
@@ -23,10 +23,10 @@
     <div id="questionchoices" class="questionchoices">
         <div id="question"></div>
         <div id="choice">I'm your answer</div>
-        <button class="choice1"></button>
-        <button class="choice2"></button>
-        <button class="choice3"></button>
-        <button class="choice4"></button>
+        <button class=quiz-button id="choice1"></button>
+        <button class=quiz-button id="choice2"></button>
+        <button class=quiz-button id="choice3"></button>
+        <button class=quiz-button id="choice4"></button>
     <button id ="homeBtn"><a href="index.html">Home</a></button>
     </div>  
  
