added lots of CSS inc bg img

--- a/highscore.html
+++ b/highscore.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/css/highscore.css"/>
 </head>
 
 <body>
@@ -16,11 +16,11 @@
             <h1 >JavaScript Quiz</h1>
                 <div class = "buttons">
                 <button id = "highscores"> High Scores! </button>
-                    <div class="showHighScores"></div>
+                    <div id = highscores class ="highscores"></div>
+                    <button id ="homeBtn"><a href="index.html">Home</a></button>
             </div>
         </div>    
     </div>
-        </ul>
     </div>    
 </body>
 </html>
