--- a/quiz.html
+++ b/quiz.html
@@ -11,8 +11,8 @@
 
 <body>
 
-    <div class="container">
-        <div id="time-score">
+<div class="container">
+    <div id="time-score">
             <h1>JavaScript Quiz</h1>
             <div class="timer">
               <h2><span id="seconds-left"></span></h2> 
@@ -22,13 +22,16 @@
         </div>    
     <div id="questionchoices" class="questionchoices">
         <div id="question"></div>
-        <div id="choice">I'm your answer</div>
+        <div id="choice"></div>
         <button class=quiz-button id="choice1"></button>
         <button class=quiz-button id="choice2"></button>
         <button class=quiz-button id="choice3"></button>
         <button class=quiz-button id="choice4"></button>
+    </div> 
     <button id ="homeBtn"><a href="index.html">Home</a></button>
-    </div>  
+</div>
+    
+
  
     <script src="./assets/javascript/script.js"></script>
 </body>
