cleaned up some html and css back to workign js

--- a/quiz.html
+++ b/quiz.html
@@ -27,6 +27,11 @@
         <button class=quiz-button id="choice2"></button>
         <button class=quiz-button id="choice3"></button>
         <button class=quiz-button id="choice4"></button>
+        <div id="answer1"></div>
+        <div id="answer2"></div>
+        <div id="answer3"></div>
+        <div id="answer4"></div>
+
     </div> 
     <button id ="homeBtn"><a href="index.html">Home</a></button>
 </div>
