--- a/highscore.html
+++ b/highscore.html
@@ -12,15 +12,15 @@
 <body>
 
     <div class="container">
-        <div id="home" class="flex-column flex-center">
-            <h1 >JavaScript Quiz</h1>
-                <div class = "buttons">
-                <button id = "highscores"> High Scores! </button>
-                    <div id = highscores class ="highscores"></div>
-                    <button id ="homeBtn"><a href="index.html">Home</a></button>
+        <h1 >JavaScript Quiz</h1>
+            <div class="input-name">
+            <h2> High Scores! </h2>
+            <h2>What's your name?</h2>
+                <label for="name"></label>
+                <input type="name" name="name" id="nameHS" placeholder="Foxy Cleopatra"/>
             </div>
-        </div>    
-    </div>
-    </div>    
+             <div id = highscores class ="highscores"></div>
+            <button id ="homeBtn"><a href="index.html">Home</a></button>
+     </div>  
 </body>
 </html>
