--- a/highscore.html
+++ b/highscore.html
@@ -14,12 +14,14 @@
     <div class="container">
         <h1 >JavaScript Quiz</h1>
             <div class="input-name">
-            <h2> High Scores! </h2>
             <h2>What's your name?</h2>
-                <label for="name"></label>
+        <form id="form">
                 <input type="name" name="name" id="nameHS" placeholder="Foxy Cleopatra"/>
             </div>
+            <h2> High Scores! </h2>
+            <div id = nameHsInput></div>
              <div id = highscores class ="highscores"></div>
+        </form>
             <button id ="homeBtn"><a href="index.html">Home</a></button>
      </div>  
 </body>
