cleaned up some code

--- a/highscore.html
+++ b/highscore.html
@@ -13,14 +13,13 @@
 
     <div class="container">
         <h1 >JavaScript Quiz</h1>
-            <div class="input-name">
+        <div class="input-name">
             <h2>What's your name?</h2>
         <form id="form">
-                <input type="name" name="name" id="nameHS" placeholder="Foxy Cleopatra"/>
-            </div>
             <h2> High Scores! </h2>
-            <div id = nameHsInput></div>
-             <div id = highscores class ="highscores"></div>
+            <p id = nameHs><span id =userName></span></p>
+            <input type="text" id="namePh" placeholder="press enter"/>
+            <div id = highscores class ="highscores"></div>
         </form>
             <button id ="homeBtn"><a href="index.html">Home</a></button>
      </div>  
