--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript Quiz!</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap">
-    <link rel="stylesheet" href="./assets/css/style.css"/>
-</head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
 
-<body>
-
+  <body>
     <div class="container">
-            <h1 >JavaScript Quiz</h1>
-            <div class = "buttons">
-                <h2 id = "playgame">Do you want to play?</h2>
-                    <button id = "yesBtn"><a href="quiz.html">yes</a></button>
-                    <button id = "noBtn"><a href="no.html">no</a></button>
-                    <button id = "highscoreBtn"><a href="highscore.html">High Scores</a></button>
-                     
-            </div>
-        </div>    
+      <h1>JavaScript Quiz</h1>
+      <div class="buttons">
+        <h2 id="playgame">Do you want to play?</h2>
+        <button id="yesBtn"><a href="quiz.html">yes</a></button>
+        <button id="noBtn"><a href="no.html">no</a></button>
+        <button id="highscoreBtn">
+          <a href="highscore.html">High Scores</a>
+        </button>
+      </div>
     </div>
-        </ul>
-    </div>    
-</body>
+  </body>
 </html>
