--- a/no.html
+++ b/no.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/no.css"/>
-</head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/no.css" />
+  </head>
 
-<body>
-
+  <body>
     <div class="container">
-            <h1 >JavaScript Quiz</h1>
-                <h2>Awww too bad...</h2>
-                <img id ="ok" src ="./assets/images/ok.png">
-                <button id = "homeBtn"><a href="index.html">Home</a></button>
-                           
-    </div>      
-</body>
+      <h1>JavaScript Quiz</h1>
+      <h2>Awww too bad...</h2>
+      <img id="ok" src="./assets/images/ok.png" />
+      <button id="homeBtn"><a href="index.html">Home</a></button>
+    </div>
+  </body>
 </html>
