--- a/highscore.html
+++ b/highscore.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>High Scores</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/highscore.css"/>
 </head>
@@ -19,7 +19,7 @@
             <p id = nameHs><span id =userName></span></p>
             <input type="text" id="namePh" placeholder="press enter"/>
             <h2> High Scores! </h2>
-            <div id = highscores class ="highscores"></div>
+            <div id = highscores class = "highscores"></div>
         </form>
             <button id ="homeBtn"><a href="index.html">Home</a></button>
      </div>  
