--- a/no.html
+++ b/no.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Oh No!</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
       rel="stylesheet"
@@ -16,7 +16,7 @@
     <div class="container">
       <h1>JavaScript Quiz</h1>
       <h3>Awww too bad...</h3>
-      <img id="ok" src="./assets/images/ok.png" />
+      <img id="ok" src="./assets/images/ok.png"/>
       <button id="homeBtn"><a href="index.html">Home</a></button>
     </div>
   </body>
