names and high score display on page

--- a/highscore.html
+++ b/highscore.html
@@ -18,10 +18,14 @@
         <form id="form">
             <p id = nameHs><span id =userName></span></p>
             <input type="text" id="namePh" placeholder="press enter"/>
+            <button id="submitBtn" type="submit">Submit</button>
             <h2> High Scores! </h2>
             <div id = highscores class = "highscores"></div>
         </form>
             <button id ="homeBtn"><a href="index.html">Home</a></button>
      </div>  
+
+<script src = "assets/javascript/Highscore.js"></script>
 </body>
+
 </html>
